-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.0, 5.5.1, 5.6.0 Alpha
-
None
-
c3f03bbff1db14dc5b5436d8aef834512207d498
QML debugger cannot deal with multiple QmlEngines
Steps to reproduce:
(1) Create a QML Application using the wizard
(2) Enable QML debugging in run settings
(3) Test QML debugging (it works)
(4)
Add this code to main.cpp
QApplication app(argc, argv); + QQmlEngine someWeirdEngine; QQmlApplicationEngine engine;
(5) Test QML debugging again (it does not work anymore)
The first break point seems to be hit, but Qt Creator does not show the correct location. Continuing does not work. The QML application hangs.
- replaces
-
QTCREATORBUG-6874 Qt Creator should be able to debug applications with multiple QDeclarative Engine instances
-
- Closed
-