tests/auto/qml/debugger/qqmldebugjs/qqmldebugjs.pro
@@ -1,23 +1,4 @@
-CONFIG += testcase
-TARGET = tst_qqmldebugjs
-QT += qml testlib gui-private core-private
-osx:CONFIG -= app_bundle
+TEMPLATE = subdirs
+SUBDIRS = qqmldebugjs qqmldebugjsserver
 
-SOURCES +=     tst_qqmldebugjs.cpp
-
-INCLUDEPATH += ../shared
-include(../../../shared/util.pri)
-include(../shared/debugutil.pri)
-
-TESTDATA = data/*
-
-OTHER_FILES += data/test.qml data/test.js \
-    data/timer.qml \
-    data/exception.qml \
-    data/oncompleted.qml \
-    data/loadjsfile.qml \
-    data/condition.qml \
-    data/changeBreakpoint.qml \
-    data/stepAction.qml \
-    data/breakpointRelocation.qml \
-    data/createComponent.qml
+qqmldebugjs.depends = qqmldebugjsserver
